--- a/課題①style.css
+++ b/課題①style.css
@@ -61,3 +61,24 @@ main{
 .title{
 	font-size: 20px;
 }
+
+/*メディアクエリ*/
+@media screen and (max-width: 768px){
+	main{
+		width: 90%;
+		margin:50px 5%;
+	}
+	.step-box{
+		width: 100%;
+		float: none;
+		margin-right: 0;
+		padding:2%;
+		margin-top: 20px;
+	}
+	.step-box:first-child{
+		margin-top: 0px;
+	}
+
+	.step1-img,.step2-img,.step3-img{
+		padding-top: 40%;
+}
